--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <html>
 
-<head lang="cs">
-    <title>Moje hra</title>
+<head lang="en">
+    <title>Coronagame</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap&subset=latin-ext" rel="stylesheet">
