--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <div id="end" style="display: none;">
         <div id="content">
-            <p id="message">Hra skončila</p>
-            <button onclick="location.reload()">Hrát znovu</button>
+            <p id="message">Game over</p>
+            <button onclick="location.reload()">Play again</button>
         </div>
     </div>
 
