--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div>
-            <img src="images/score.png" alt="Vitamín">
+            <img src="images/score.png" alt="score">
             <span id="score">0/6</span>
         </div>
 
