--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         </div>
     </header>
 
+    <div id="introduction">
+        <div class="content">
+            <p>Vítej v corona virus game!</p>
+
+            <button id="start">Start hry</button>
+        </div>
+    </div>
+
     <div id="end" style="display: none;">
         <div id="content">
             <p id="message">Game over</p>
