--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div>
             <img class="scoreImg" src="images/score.png" alt="score">
-            <span id="score">0/3</span>
+            <span id="score"></span>
         </div>
 
         <div id="time">
