--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- <script src="script.min.js" defer></script> -->
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -40,8 +42,6 @@
     <div id="game">
         <canvas id="canvas"></canvas>
     </div>
-
-    <script src="script.js"></script>
 </body>
 
 </html>
